--- a/ionic-mobile/elektron/www/templates/menu.html
+++ b/ionic-mobile/elektron/www/templates/menu.html
@@ -23,6 +23,7 @@
         <ion-item menu-close href="#/app/components"><i class="icon ion-cube"></i> Componentes </ion-item>
         <ion-item menu-close href="#/app/tasks"><i class="icon ion-clipboard"></i> Tareas </ion-item>
         <ion-item menu-close href="#/app/statistics"><i class="icon ion-arrow-graph-up-right"></i> Estadísticas </ion-item>
+        <ion-item menu-close href="#/app/history"><i class="icon ion-arrow-graph-up-right"></i> Datos históricos </ion-item>
         <ion-item menu-close href="#/app/configuration"><i class="icon ion-gear-a"></i> Configuración </ion-item>
         <ion-item menu-close href="#/app/logout"><i class="icon ion-log-out"></i> Cerrar sesion </ion-item>
       </ion-list>
