Muchos avances en mobile. Monitor en el web y dashboard

--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -35,3 +35,8 @@
   padding-left: 5% !important;
   padding-right: 5% !important;
 }
+
+.task-float-right {
+  float: right;
+  margin-left: 5px;
+}
