--- a/ionic-mobile/elektron/www/templates/menu.html
+++ b/ionic-mobile/elektron/www/templates/menu.html
@@ -21,6 +21,7 @@
       <ion-list id="menuLinks">
         <ion-item menu-close href="#/app/dashboard"><i class="icon ion-home"></i> Inicio</ion-item>
         <ion-item menu-close href="#/app/components"><i class="icon ion-cube"></i> Componentes </ion-item>
+        <ion-item menu-close href="#/app/monitor"><i class="icon ion-compass"></i> Monintor </ion-item>
         <ion-item menu-close href="#/app/tasks"><i class="icon ion-clipboard"></i> Tareas </ion-item>
         <ion-item menu-close href="#/app/statistics"><i class="icon ion-arrow-graph-up-right"></i> Estadísticas </ion-item>
         <ion-item menu-close href="#/app/history"><i class="icon ion-arrow-graph-up-right"></i> Datos históricos </ion-item>
