--- a/ionic-mobile/elektron/www/templates/tasks.html
+++ b/ionic-mobile/elektron/www/templates/tasks.html
@@ -2,27 +2,103 @@
   <ion-content>
     <div class="item">
       <div class="button-bar">
-        <a ui-sref="app.task" class="button button-stable ion-plus-circled">
-          Agregar nueva tarea
-        </a>
+        <a class="button button-positive" ng-show="porconsumo == true">Por consumo</a>
+        <a class="button" ng-show="porconsumo == false" ng-click="changeToConsume()">Por consumo</a>
+        <a class="button" ng-show="porconsumo == true" ng-click="changeToDate()">Por fecha y hora</a>
+        <a class="button button-positive" ng-show="porconsumo == false">Por fecha y hora</a>
       </div>
     </div>
-    <div class="card" ng-repeat="task in tasks">
-      <div class="item item-divider">
-          <b>Tarea:</b> {{task.label}}
+    <!-- Por Consumo -->
+    <div ng-show="porconsumo == true">
+      <div class="item">
+        <div class="button-bar">
+          <a ui-sref="app.task" class="button button-stable ion-plus-circled">
+            Agregar nueva tarea por consumo
+          </a>
+        </div>
       </div>
-      <div class="list">
-          <div class="item">
-            <span>Componente: {{task.component}}</span>
-          </div>
-          <div class="item item-button-right">
-            <span><b>Dia:</b> {{task.date| date: "shortDate"}}</span>
-            <span><b>Hora:</b> {{task.date| date: "shortTime"}}</span>
-            <a class="button button-assertive">
-              <i class="icon ion-trash-b"></i>
-            </a>
-          </div>
+      <div class="card" ng-repeat="task in datatasks_server">
+        <div class="list">
+            <div class="item item-divider">
+                <b>Tarea:</b> {{task.label}}
+                <span ng-show="task.taskstate.name == 'done'" class="badge badge-assertive">Terminada</span>
+                <span ng-show="task.taskstate.name == 'ready'" class="badge badge-balanced">Lista</span>
+            </div>
+            <div class="item">
+              <span><b>Componente:</b> {{task.device.label}}</span>
+              <span ng-show="task.taskfunction.name == 'turnon'" class="badge badge-light">Tarea: Encender</span>
+              <span ng-show="task.taskfunction.name == 'shutdown'" class="badge badge-light">Tarea: Apagar</span>
+            </div>
+            <div class="item ">
+              <span><b>Consumo:</b>
+              <span ng-show="task.comparator == '0'">
+                Mayor a
+              </span>
+              <span ng-show="task.comparator == '1'">
+                Menor a
+              </span>
+              <span ng-show="task.comparator == '2'">
+                Igual a
+              </span>
+              <b>{{task.data_value}}</b>
+              </span>
+              <span class="badge badge-light">Repeticiones: {{task.repeats}}</span>
+            </div>
+            <div class="item">
+              <b>Última ejecución:</b> {{task.last_run | date: "shortDate"}} ({{task.last_run | date: "shortTime"}})
+              <a class="task-float-right button button-small button-assertive">
+                <i class="icon ion-trash-b"></i>
+              </a>
+              <a class="task-float-right button button-small button-positive">
+                <i class="icon ion-edit"></i>
+              </a>
+            </div>
+        </div>
       </div>
     </div>
+    <!-- / Por Consumo -->
+    <!-- Por fecha -->
+    <div ng-show="porconsumo == false">
+      <div class="item">
+        <div class="button-bar">
+          <a ui-sref="app.task" class="button button-stable ion-plus-circled">
+            Agregar nueva tarea por fecha
+          </a>
+        </div>
+      </div>
+      <div class="card" ng-repeat="task in datetimetasks_server">
+        <div class="list">
+            <div class="item item-divider">
+                <b>Tarea:</b> {{task.label}}
+                <span ng-show="task.taskstate.name == 'done'" class="badge badge-assertive">Terminada</span>
+                <span ng-show="task.taskstate.name == 'ready'" class="badge badge-balanced">Lista</span>
+            </div>
+            <div class="item">
+              <span>Componente: {{task.device.label}}</span>
+              <span ng-show="task.taskfunction.name == 'turnon'" class="badge badge-light">Tarea: Encender</span>
+              <span ng-show="task.taskfunction.name == 'shutdown'" class="badge badge-light">Tarea: Apagar</span>
+            </div>
+            <div class="item ">
+              <span><b>Dia:</b> {{task.datetime | date: "shortDate"}}</span>
+              <span><b>Hora:</b> {{task.datetime | date: "shortTime"}}</span>
+              <span ng-show="task.repeat_criteria == '0'" class="badge badge-light">Criterio: Hora</span>
+              <span ng-show="task.repeat_criteria == '1'" class="badge badge-light">Criterio: Dia</span>
+            </div>
+            <div class="item">
+              <b>Repeticiones:</b> {{task.repeats}}
+
+              <a class="task-float-right button button-small button-assertive">
+                <i class="icon ion-trash-b"></i>
+              </a>
+              <a class="task-float-right button button-small button-positive">
+                <i class="icon ion-edit"></i>
+              </a>
+
+            </div>
+        </div>
+      </div>
+    </div>
+    <!-- / Por fecha -->
+
   </ion-content>
 </ion-view>
