borrar tareas. agregar tarea datatask. falta datatimetask. falta editar ambas

--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -28,9 +28,17 @@
   margin-left: 10px;
 }
 
+.badge-task {
+  margin-top:2px;
+}
+
 .edit-component-label {
   font-size: 1.2em;
   margin-left: 10px;
+}
+
+.repeticiones-input {
+  text-align: end;
 }
 
 .mac-components {
