--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -56,22 +56,24 @@
               </div>
         </div>
         <div class="list">
-              <div class="row item item-divider">
-                <div class="col col-50 title-components"><b>Componentes</b></div>
-                <div class="col"></div>
-                <div class="col"><a ui-sref="app.components" class="button button-small button-positive">Ver todos</a>
-                </div>
-              </div>
-              <div class="item" ng-repeat="component in components_server | limitTo:quantity">
-                <span>{{component.label}}</span>
-                <span ng-if="component.devicestate.name == 'on'" class="badge badge-balanced">encendido</span>
-                <span ng-if="component.devicestate.name == 'off'" class="badge badge-assertive">apagado</span>
-              </div>
-        </div>
-        <div class="row item item-divider">
-          <div class="col col-50 title-components"><b>Estadisticas</b></div>
-          <div class="col"></div>
-          <div class="col"><a ui-sref="app.statistics" class="button button-small button-positive">Ver estadisticas</a>
+          <div class="row item item-divider">
+            <div class="col col-50 title-components"><b>Componentes</b></div>
+            <div class="col"></div>
+            <div class="col">
+              <a ui-sref="app.components" class="button button-small button-positive">Ver todos</a>
+            </div>
+          </div>
+          <div class="item" ng-repeat="component in components_server | limitTo:quantity">
+            <span>{{component.label}}</span>
+            <span ng-if="component.devicestate.name == 'on'" class="badge badge-balanced">encendido</span>
+            <span ng-if="component.devicestate.name == 'off'" class="badge badge-assertive">apagado</span>
+          </div>
+          <div class="row item item-divider">
+            <div class="col col-50 title-components"><b>Estadisticas</b></div>
+            <div class="col"></div>
+            <div class="col">
+              <a ui-sref="app.statistics" class="button button-small button-positive">Ver estadisticas</a>
+            </div>
           </div>
         </div>
       </div>
