--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -48,11 +48,11 @@
               </div>
               <div class="item">
                 <span>Consumo actual: </span>
-                <span class="badge badge-positive"> 233 </span>
+                <span class="badge badge-positive"> {{ general_data.total_watts | number : 2 }} w </span>
               </div>
               <div class="item">
                 <span>Costo aproximado: </span>
-                <span class="badge badge-calm"> $1233 </span>
+                <span class="badge badge-calm"> $ {{ general_data.total_tax | number : 2 }} </span>
               </div>
         </div>
         <div class="list">
